<resources>
    <string name="app_name">Drug Addictss</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">500647523346044</string>
    <string name="fb_login_protocol_scheme">fb500647523346044</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_with">Sign in with</string>
    <string name="do_not_have_account">Do not have an account? Sign Up</string>
    <string name="prompt_username">Name</string>
    <string name="action_register">Register</string>
    <string name="forget_password_txt">Please enter your registered E-mail for password rest instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="goto_Login">If you already have account goto login</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_hom">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
